# BevyJam6.0

./: .gitignore  Cargo.toml  NOTES.md  README.md  bevy_jam6-496cc24f177df016.js  flake.nix  index.html  old_main.rs  rust-toolchain.toml
assets/shaders/: board_material.wgsl  types.wgsl  zombie.wgsl
src/: bare.rs  board_buffers.rs  constants.rs  display.rs  game.rs  main.rs  map_gen.rs  menu.rs  old-main.rs  shader_types.rs  terrain.rs
