[package]
name = "bevy_jam6"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.16.1", features = ["bevy_winit", "webgpu", "bevy_render", "bevy_core_pipeline"]}
